Anchored nav bar to top and made it responsive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <div class="top-div">
             <div class="top-nav">
-                <ul class="top-nav" id="topNav">
+                <ul class="nav-items" id="topNav">
                     <li class="introduction">Hello, I am Sam Foucart</li>
                     <li class="top-nav-overflow">
                         <a href="javascript:void(0);" class="icon" onclick="topNavOverflow()">
