--- a/index.html
+++ b/index.html
@@ -33,13 +33,8 @@
                   </ul>
             </div>
             <p>Hello;</p>
-            <div id="clock-div">
-                <h1 id="clock">
-                    00/00/0000
-                    00:00:00
-                </h1>
-            </div>
             <div id="WebGL-div">
+                <h1>WebGL Single Dimensional Heat Equation Visualization</h1>
                 <script id="vertex-shader-2d" type="notjs">
 
                     // an attribute will receive data from a buffer
