--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </script>
                 <canvas id="WebGL-canvas"></canvas>
                 <h2>References:</h2>
-                <p>[1] gfxfundamentals. "WebGL Fundamentals" https://webglfundamentals.org/ , https://github.com/gfxfundamentals/webgl-fundamentals , Accessed November 2020</p>
+                <p>[1] Gregg Tavares. "WebGL Fundamentals" https://webglfundamentals.org/ , https://github.com/gfxfundamentals/webgl-fundamentals , Accessed November 2020</p>
                 <p>[2] David L. Powers. "Boundary Value Problems:  and Partial Differential Equations." Academic Press, 2006.</p>
             </div>
         </div>
