Added Stubs for About, Contact, and Projects

--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
                             <i class="fa fa-bars"></i>
                         </a>
                     </li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="#external">External</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a class="active" href="#home">Home</a></li>
                   </ul>
             </div>
-            <p>Hello;</p>
+            <p>Hello ;)</p>
             <div id="WebGL-div">
                 <h1>WebGL Single Dimensional Heat Equation Visualization</h1>
                 <canvas id="WebGL-canvas"></canvas>
