Moved WebGL renderer into separate javascript than navigation js

--- a/index.html
+++ b/index.html
@@ -76,5 +76,6 @@
     <script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>
     <script src="https://webglfundamentals.org/webgl/resources/primitives.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/HeatEquation.js"></script>
 </body>
 </html>
