--- a/about.html
+++ b/about.html
@@ -32,43 +32,10 @@
             </ul>
         </div>
         <p>Hello ;)</p>
-        <div id="WebGL-div">
-            <h1>WebGL Single Dimensional Heat Equation Visualization</h1>
-            <canvas id="WebGL-canvas"></canvas>
-            <!-- vertex shader -->
-            <script  id="vertex-shader-3d" type="x-shader/x-vertex">
-                attribute vec4 a_position;
-                attribute vec4 a_color;
-
-                uniform mat4 u_matrix;
-
-                varying vec4 v_color;
-
-                void main() {
-                    // Multiply the position by the matrix.
-                    gl_Position = u_matrix * a_position;
-
-                    // Pass the color to the fragment shader.
-                    v_color = a_color;
-                }
-            </script>
-            <!-- fragment shader -->
-            <script  id="fragment-shader-3d" type="x-shader/x-fragment">
-                precision mediump float;
-
-                // Passed in from the vertex shader.
-                varying vec4 v_color;
-
-                uniform vec4 u_colorMult;
-
-                void main() {
-                    gl_FragColor = v_color * u_colorMult;
-                }
-            </script>
-            <h2>References:</h2>
-            <p>[1] Gregg Tavares. "WebGL Fundamentals" https://webglfundamentals.org/ , https://github.com/gfxfundamentals/webgl-fundamentals , Accessed November 2020</p>
-            <p>[2] David L. Powers. "Boundary Value Problems:  and Partial Differential Equations." Academic Press, 2006.</p>
-        </div>
+    </div>
+    <div class="content-body">
+        <h1>Projects</h1>
+        <p>Under Construction</p>
     </div>
 </main>
 
