Added About, resume, and picture

--- a/about.html
+++ b/about.html
@@ -34,14 +34,16 @@
         <p>Hello ;)</p>
     </div>
     <div class="content-body">
-        <h1>Projects</h1>
-        <p>Under Construction</p>
+        <h1>About</h1>
+        <p>I am originally from the Hocking Hills in Ohio. I am currently an electrical engineering student
+        at Ohio University studying optics and statistical image processing.</p>
+        <p>Here is a copy of my resume:</p>
+        <a href="media/Research_Resume_Fall_2020.pdf">Resume. (Last Updated 11/29/2020)</a>
+        <br>
+        <img src="media/square_headshot.jpg" alt="Picture of Me :)" style="width:250px;height:250px;"/>
     </div>
 </main>
 
-<script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
-<script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>
-<script src="https://webglfundamentals.org/webgl/resources/primitives.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
