Added content to Contact

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,12 @@
     </div>
     <div class="content-body">
         <h1>Contact</h1>
-        <p>Under Construction</p>
+        <p>For academic inquiries:</p>
+        <a href="mailto:sf241616@ohio.edu">sf241616@ohio.edu</a>
+        <p>GitHub:</p>
+        <a href="https://github.com/samfoucart">https://github.com/samfoucart</a>
+        <p>LinkedIn:</p>
+        <a href="https://www.linkedin.com/in/samfoucart/">https://www.linkedin.com/in/samfoucart/</a>
     </div>
 </main>
 
