Updated webpage title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Startpage</title>
-    <meta name="description" content="Startpage">
+    <meta name="description" content="Sam Foucart - Home">
     <meta name="author" content="Sam Foucart">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet"
