Changed home link button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a class="active" href="#home">Home</a></li>
+                    <li><a class="active">Home</a></li>
                   </ul>
             </div>
             <p>Hello ;)</p>
