Changed webpage title

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Startpage</title>
+    <title>Sam Foucart - Home</title>
     <meta name="description" content="Sam Foucart - Home">
     <meta name="author" content="Sam Foucart">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Oswald">
     <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-    <link rel="stylesheet" 
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">        
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
