--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                         void main() {
                             gl_FragColor = v_color * u_colorMult;
                         }
-                    </script>
+                </script>
+                <i>This project is under construction. It is expected to be completed by December 9th, 2020.</i>
                 <h2>References:</h2>
                 <p>[1] Gregg Tavares. "WebGL Fundamentals" https://webglfundamentals.org/ , https://github.com/gfxfundamentals/webgl-fundamentals , Accessed November 2020</p>
                 <p>[2] David L. Powers. "Boundary Value Problems:  and Partial Differential Equations." Academic Press, 2006.</p>
