--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                 <h2>References:</h2>
                 <p>[1] Gregg Tavares. "WebGL Fundamentals" https://webglfundamentals.org/ , https://github.com/gfxfundamentals/webgl-fundamentals , Accessed November 2020</p>
                 <p>[2] David L. Powers. "Boundary Value Problems:  and Partial Differential Equations." Academic Press, 2006.</p>
+                <p>[3] Edward Angel and Dave Shreiner. "Interactive Computer Graphics: A Top-Down Approach with OpenGL" Sixth Edition, Addison-Wesley. 2012</p>
+                <p>[4] Pavel Dobryakov. "WebGL Fluid Simulation" https://github.com/PavelDoGreat/WebGL-Fluid-Simulation</p>
             </div>
         </div>
     </main>
