Added Link to source code

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                 <h1>WebGL Single Dimensional Heat Equation Visualization</h1>
                 <canvas id="WebGL-canvas"></canvas>
                 <i>This project is under construction. It is expected to be completed by December 9th, 2020.</i>
+                <p>Source code is available at:</p>
+                <a href="https://github.com/samfoucart/samfoucart">https://github.com/samfoucart/samfoucart</a>
                 <h2>References:</h2>
                 <p>[1] Gregg Tavares. "WebGL Fundamentals" https://webglfundamentals.org/ , https://github.com/gfxfundamentals/webgl-fundamentals , Accessed November 2020</p>
                 <p>[2] David L. Powers. "Boundary Value Problems:  and Partial Differential Equations." Academic Press, 2006.</p>
