Able to change series coefficients

--- a/index.html
+++ b/index.html
@@ -37,6 +37,23 @@
             <div id="WebGL-div">
                 <h1>WebGL Single Dimensional Heat Equation Visualization</h1>
                 <canvas id="WebGL-canvas"></canvas>
+                <div class="HeatController">
+                    <div class="controller-item">
+                        <button id="coefficient-subtract">-</button>
+                        <p>Number of Fourier Series Coefficients: </p>
+                        <p id="num-coefficients-text">100</p>
+                        <button id="coefficient-add">+</button>
+                    </div>
+                    <div class="controller-item">
+                        <button id="time-subtract">-</button>
+                        <p>Current Time: </p>
+                        <p id="current-time">0</p>
+                        <button id="time-add">+</button>
+                    </div>
+                    <div class="controller-item">
+                        <button id="simulate-button">Simulate</button>
+                    </div>
+                </div>
                 <i>This project is under construction. It is expected to be completed by December 9th, 2020.</i>
                 <p>Source code is available at:</p>
                 <a href="https://github.com/samfoucart/samfoucart">https://github.com/samfoucart/samfoucart</a>
