--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <button id="time-add">+</button>
                     </div>
                     <div class="controller-item">
-                        <button id="simulate-button">Simulate</button>
+                        <button id="simulate-button">Start Simulation</button>
                     </div>
                 </div>
                 <i>This project is under construction. It is expected to be completed by December 9th, 2020.</i>
