--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                         <button id="simulate-button">Start Simulation</button>
                     </div>
                 </div>
-                <i>This project is under construction. It is expected to be completed by December 9th, 2020.</i>
+                <i>This project is a visualization of the Fourier series solution to the single dimensional heat equation along a rod. The mesh is generated and shaded using WebGL.</i>
+                <p>Click and drag on the mesh to view from different angles.</p>
                 <p>Source code is available at:</p>
                 <a href="https://github.com/samfoucart/samfoucart">https://github.com/samfoucart/samfoucart</a>
                 <h2>References:</h2>
