Added Unfinished Resume Section

--- a/about.html
+++ b/about.html
@@ -35,11 +35,34 @@
     </div>
     <div class="content-body">
         <h1>About</h1>
-        <p>I am originally from the Hocking Hills in Ohio. I am currently an electrical engineering student
-        at Ohio University studying optics and statistical image processing.</p>
-        <p>Here is a copy of my resume:</p>
-        <a href="media/Research_Resume_Fall_2020.pdf">Resume. (Last Updated 11/29/2020)</a>
-        <br>
+        <p> 
+            I am originally from the Hocking Hills in Ohio.
+            I have recently graduated from Ohio University with a B.S. in Electrical/Computer engineering and a minor in Computer Science and Mathematics.
+            Right now, I am currently searching for a career in Software Engineering or Hardware Engineering.
+            My goal is to design fast, easy to use systems that impact a large amount of customers, whether that be through a web application or low-level application.
+            I am interested in very broad applications of computer science and hope to grow my skills in a full time career.
+        </p>
+        <h2 class="resume-heading">Skills</h2>
+        <ul class="resume-skills">
+            <li>Programming Languages: Java, C++</li>
+            <li>Tools: Visual Studio</li>
+        </ul>    
+        <h2 class="resume-heading">Education</h2>
+        <p>Ohio University: B.S. Electrical/Computer Engineering - Class of 2021</p>
+        <p>Minor in Computer Science and Mathematics</p>
+        <p>GPA: 3.673</p>
+        <p>Athens Ohio, 45701</p>
+        <h2 class="resume-heading">Work Experience</h2>
+        <p>NICE inContact: Software Engineering Intern</p>
+        <p>May - August 2019</p>
+        <ul>
+            <li>Wrote production code on the multimedia team using C#, JavaScript, and FFMPEG libraries</li>
+            <li>Implemented system in JavaScript playback portal to alter speed of video without affecting pitch</li>
+            <li>Participated in Agile/Scrum development procedures and submitted daily updates on Jira</li>
+            <li>Used RabbitMQ for messaging related to encoding/compression</li>
+            <li>Learned how to effectively use Microsoft SQL for retrieving media from database</li>
+        </ul>
+        
         <img src="media/square_headshot.jpg" alt="Picture of Me :)" style="width:250px;height:250px;"/>
     </div>
 </main>
