Centered App thumbnail

--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
         <a href="https://github.com/samfoucart/oueecs_SpectralDataViewer">
             <div class="project-item-div">
                 <div class="project-image">
-                    <img src="media/zoomed-spectra.png" alt="App Thumbnail" width="64" height="128" margin: auto/>
+                    <img src="media/zoomed-spectra.png" alt="App Thumbnail" class="project-thumbnail"/>
                 </div>
                 <div class="project-item-infotext">
                     <h2>Electromagnetic Spectral Data Collector/Viewer</h2>
